{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 232,
  "lineage": "9e43e47f-6b64-18ab-f65c-51bc1e14b478",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c0f145087601dfa1",
            "domain": "vpc",
            "id": "eipalloc-0c0f145087601dfa1",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-234-205-251.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.234.205.251",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-tf-dev-ap-south-1a",
              "Owner": "Sharad"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-tf-dev-ap-south-1a",
              "Owner": "Sharad"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:545469108528:internet-gateway/igw-07b065fd554e7dfb3",
            "id": "igw-07b065fd554e7dfb3",
            "owner_id": "545469108528",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-tf-dev",
              "Owner": "Sharad"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-tf-dev",
              "Owner": "Sharad"
            },
            "vpc_id": "vpc-009f6c5a66b4912f9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c0f145087601dfa1",
            "connectivity_type": "public",
            "id": "nat-0ca855b54eb7efc97",
            "network_interface_id": "eni-068081cf0780a59a2",
            "private_ip": "10.0.101.46",
            "public_ip": "13.234.205.251",
            "subnet_id": "subnet-00b6679baedf8c3c9",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-tf-dev-ap-south-1a",
              "Owner": "Sharad"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-tf-dev-ap-south-1a",
              "Owner": "Sharad"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f8ea9e4bf4c773051080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ca855b54eb7efc97",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f8ea9e4bf4c77305",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07b065fd554e7dfb3",
            "id": "r-rtb-0ca1066ab6d9f66a41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ca1066ab6d9f66a4",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:545469108528:route-table/rtb-0f8ea9e4bf4c77305",
            "id": "rtb-0f8ea9e4bf4c77305",
            "owner_id": "545469108528",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-tf-dev-private",
              "Owner": "Sharad"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-tf-dev-private",
              "Owner": "Sharad"
            },
            "timeouts": null,
            "vpc_id": "vpc-009f6c5a66b4912f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:545469108528:route-table/rtb-0ca1066ab6d9f66a4",
            "id": "rtb-0ca1066ab6d9f66a4",
            "owner_id": "545469108528",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07b065fd554e7dfb3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-tf-dev-public",
              "Owner": "Sharad"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-tf-dev-public",
              "Owner": "Sharad"
            },
            "timeouts": null,
            "vpc_id": "vpc-009f6c5a66b4912f9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb91f2fbdeb3be08",
            "route_table_id": "rtb-0f8ea9e4bf4c77305",
            "subnet_id": "subnet-0dba04d1df8e5b1eb"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01bb4c52608576487",
            "route_table_id": "rtb-0f8ea9e4bf4c77305",
            "subnet_id": "subnet-01f8dbced6e6b0470"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b1cbb0855df7e8a",
            "route_table_id": "rtb-0ca1066ab6d9f66a4",
            "subnet_id": "subnet-00b6679baedf8c3c9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057d737d4f5379cdf",
            "route_table_id": "rtb-0ca1066ab6d9f66a4",
            "subnet_id": "subnet-0df60b1bb400205d7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:545469108528:subnet/subnet-0dba04d1df8e5b1eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dba04d1df8e5b1eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "545469108528",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-tf-dev-private-ap-south-1a",
              "Owner": "Sharad",
              "Type": "private-subnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-tf-dev-private-ap-south-1a",
              "Owner": "Sharad",
              "Type": "private-subnets"
            },
            "vpc_id": "vpc-009f6c5a66b4912f9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:545469108528:subnet/subnet-01f8dbced6e6b0470",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f8dbced6e6b0470",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "545469108528",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-tf-dev-private-ap-south-1b",
              "Owner": "Sharad",
              "Type": "private-subnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-tf-dev-private-ap-south-1b",
              "Owner": "Sharad",
              "Type": "private-subnets"
            },
            "vpc_id": "vpc-009f6c5a66b4912f9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:545469108528:subnet/subnet-00b6679baedf8c3c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b6679baedf8c3c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "545469108528",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-tf-dev-public-ap-south-1a",
              "Owner": "Sharad",
              "Type": "public-subnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-tf-dev-public-ap-south-1a",
              "Owner": "Sharad",
              "Type": "public-subnets"
            },
            "vpc_id": "vpc-009f6c5a66b4912f9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:545469108528:subnet/subnet-0df60b1bb400205d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df60b1bb400205d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "545469108528",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-tf-dev-public-ap-south-1b",
              "Owner": "Sharad",
              "Type": "public-subnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-tf-dev-public-ap-south-1b",
              "Owner": "Sharad",
              "Type": "public-subnets"
            },
            "vpc_id": "vpc-009f6c5a66b4912f9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:545469108528:vpc/vpc-009f6c5a66b4912f9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08dd1e1dc877c75b2",
            "default_route_table_id": "rtb-0ffee09fd51b5d9a6",
            "default_security_group_id": "sg-0a4ad640015e36735",
            "dhcp_options_id": "dopt-7a739213",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-009f6c5a66b4912f9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ffee09fd51b5d9a6",
            "owner_id": "545469108528",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-tf-dev",
              "Owner": "Sharad"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-tf-dev",
              "Owner": "Sharad"
            }
          }
        }
      ]
    }
  ]
}